home page category

--- a/src/Alyya/JobeetBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/Alyya/JobeetBundle/Resources/config/doctrine/Category.orm.yml
@@ -1,5 +1,6 @@
 Alyya\JobeetBundle\Entity\Category:
     type: entity
+    repositoryClass: Alyya\JobeetBundle\Repository\CategoryRepository
     table: category
     id:
         id:
