--- a/src/Alyya/JobeetBundle/Resources/config/doctrine/Job.orm.yml
+++ b/src/Alyya/JobeetBundle/Resources/config/doctrine/Job.orm.yml
@@ -1,5 +1,6 @@
 Alyya\JobeetBundle\Entity\Job:
     type: entity
+    repositoryClass : Alyya\JobeetBundle\Repository\JobRepository
     table: job
     id:
         id:
@@ -59,5 +60,5 @@ Alyya\JobeetBundle\Entity\Job:
                 name: category_id
                 referencedColumnName: id
     lifecycleCallbacks:
-        prePersist: [ setCreatedAtValue ]
+        prePersist: [ setCreatedAtValue, setExpiredAtValue ]
         preUpdate: [ setUpdatedAtValue ]
