--- a/src/Alyya/JobeetBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/Alyya/JobeetBundle/Resources/config/doctrine/Category.orm.yml
@@ -11,6 +11,10 @@ Alyya\JobeetBundle\Entity\Category:
             type: string
             length: 255
             unique: true
+        slug:
+            type: string
+            length: 255
+            unique: true
     oneToMany:
         jobs:
             targetEntity: Job
@@ -19,3 +23,6 @@ Alyya\JobeetBundle\Entity\Category:
         affiliates:
             targetEntity: Affiliate
             mappedBy: categories
+    lifecycleCallbacks:
+        prePersist: [setSlugValue]
+        preUpdate: [setSlugValue]
