--- a/src/Alyya/JobeetBundle/Resources/config/routing.yml
+++ b/src/Alyya/JobeetBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ alyya_jobeet_alyya_job:
 alyya_jobeet_homepage:
     path:     /
     defaults: { _controller: AlyyaJobeetBundle:Job:index }
+
+alyya_category_show :
+    path:     /category/{slug}/{page}
+    defaults: { _controller: AlyyaJobeetBundle:Category:show , page: 1 }
