--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,6 +8,7 @@ imports:
 parameters:
     locale: en
     max_job_on_homepage: 10
+    category_job_per_page: 10
 
 framework:
     #esi:             ~
