--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -1,10 +1,11 @@
 imports:
     - { resource: config_dev.yml }
-
+    - { resource: parameters_test.yml}
 framework:
     test: ~
     session:
         storage_id: session.storage.mock_file
+        name: "myapp"
     profiler:
         collect: false
 
@@ -14,3 +15,6 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+liip_functional_test: ~
+
