--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "sensio/generator-bundle": "~3.0",
         "symfony/phpunit-bridge": "~2.7",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "doctrine/data-fixtures": "dev-master"
+        "doctrine/data-fixtures": "dev-master",
+        "liip/functional-test-bundle": "^1.5",
+        "instaclick/base-test-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
