--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,13 @@
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "doctrine/data-fixtures": "dev-master",
         "liip/functional-test-bundle": "^1.5",
-        "instaclick/base-test-bundle": "dev-master"
+        "instaclick/base-test-bundle": "dev-master",
+        "behat/behat": "~3.0.4",
+        "behat/symfony2-extension": "^2.1",
+        "behat/mink": "^1.7",
+        "behat/mink-extension": "^2.2",
+        "behat/mink-browserkit-driver": "^1.3",
+        "behatch/contexts": "*"
     },
     "scripts": {
         "post-install-cmd": [
