--- a/src/Alyya/JobeetBundle/Resources/config/routing.yml
+++ b/src/Alyya/JobeetBundle/Resources/config/routing.yml
@@ -9,3 +9,5 @@ alyya_jobeet_homepage:
 alyya_category_show :
     path:     /category/{slug}/{page}
     defaults: { _controller: AlyyaJobeetBundle:Category:show , page: 1 }
+    requirements:
+      page: \d+
