--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,7 +19,7 @@ framework:
         strict_requirements: ~
     form:            ~
     csrf_protection: ~
-    validation:      { enable_annotations: true , strict_email: true }
+    validation:      { enable_annotations: true }
     #serializer:      { enable_annotations: true }
     templating:
         engines: ['twig']
@@ -66,3 +66,10 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+#vich_uploader:
+ #   db_driver: orm
+  #  mappings:
+   #         job_logo:
+    #            uri_prefix:         /images/jobs
+     #           upload_destination: %kernel.root_dir%/../web/images/jobs
+      #          namer:              vich_uploader.namer_uniqid
