--- a/src/Alyya/JobeetBundle/Resources/config/doctrine/Job.orm.yml
+++ b/src/Alyya/JobeetBundle/Resources/config/doctrine/Job.orm.yml
@@ -60,5 +60,8 @@ Alyya\JobeetBundle\Entity\Job:
                 name: category_id
                 referencedColumnName: id
     lifecycleCallbacks:
-        prePersist: [ setCreatedAtValue, setExpiredAtValue ]
-        preUpdate: [ setUpdatedAtValue ]
+        prePersist: [ setTokenValue , preUpload , setCreatedAtValue, setExpiredAtValue ]
+        preUpdate: [ preUpload , setUpdatedAtValue ]
+        postPersist: [ upload ]
+        postUpdate: [ upload ]
+        postRemove: [ removeUpload ]
