--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,18 @@ alyya_jobeet:
     resource: "@AlyyaJobeetBundle/Resources/config/routing.yml"
     prefix:   /
 
+login:
+    path: /login
+    defaults: {_controller: AlyyaJobeetBundle:Security:login}
+
+logout:
+    path: /logout
+
+admin_area:
+    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
