--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,22 +3,42 @@
 security:
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
-    providers:
-        in_memory:
-            memory: ~
+  providers:
+    our_db_provider:
+      entity:
+        class: AlyyaJobeetBundle:User
+        property: username
 
-    firewalls:
+  encoders:
+    Alyya\JobeetBundle\Entity\User:
+      algorithm: bcrypt
+
+  role_hierarchy:
+    ROLE_ADMIN:       ROLE_USER
+    ROLE_SUPER_ADMIN: [ROLE_USER ,ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
+  firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
 
-        main:
-            anonymous: ~
+    main:
+      pattern: ^/
+      anonymous: ~
+      provider: our_db_provider
+      form_login:
+        login_path: login
+        check_path: login
+      logout:
+        path: /logout
+        target: /
             # activate different ways to authenticate
-
-            # http_basic: ~
             # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+
+  access_control:
+    - { path: ^/admin, roles: ROLE_ADMIN }
+
