--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "knplabs/knp-paginator-bundle": "^2.5",
         "vich/uploader-bundle": "^0.14.0",
         "sonata-project/admin-bundle": "2.3.*",
-        "sonata-project/doctrine-orm-admin-bundle": "2.3.*"
+        "sonata-project/doctrine-orm-admin-bundle": "2.3.*",
+        "friendsofsymfony/rest-bundle": "2.0.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
@@ -60,7 +61,7 @@
     "config": {
         "bin-dir": "bin",
         "platform": {
-            "php": "5.3.9"
+            "php": "5.6"
         }
     },
     "extra": {
